<resources>
    <string name="app_name">quizdroid</string>
    <string name="descriptionTag">Description: </string>
    <string name="numberOfQuestionsTag">Number of Questions: </string>
    <string name="numberOfQuestions">1</string>
    <string name="beginButton">Begin</string>
    <string name="submitButton">Submit</string>
    <string name="answerChoosenTag">You answered: </string>
    <string name="correctAnswerTag">The correct answer is: </string>
    <string name="nextButton">Next</string>
    <string name="finishButton">Finish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
